# Trading-terminal

./: .gitignore  AUTHENTICATION_INDEX.md  BACKEND_DEPLOYMENT.md  BACKTESTING_TAB_STATE.txt  CHANGELOG.md  DEPLOYMENT_QUICKSTART.md  LOGIN_QUICKREF.md  PHASE_1B_INTEGRATION_GUIDE.md  PHASE_1B_PANEL_COMPONENTS_COMPLETE.md  PM2_CONFIGURATION.md  PM2_QUICKREF.md  README.md  SETUP_AND_LOGIN_GUIDE.md  SHA256SUMS.txt  STRATEGY_RESEARCH_STRATEGY_TESTER_ENGINE.txt  Trading Cockpit Setup 0.0.1.exe.blockmap  Trading Terminal Setup 0.0.2.exe.blockmap  Trading Terminal Setup 0.0.3.exe.blockmap  Trading Terminal Setup 0.0.4.exe.blockmap  Trading-Terminal-Setup-0.0.18.exe.blockmap  Trading-Terminal-Setup-0.0.19.exe.blockmap  Trading-Terminal-Setup-0.0.20.exe.blockmap  Trading-Terminal-Setup-0.0.22.exe.blockmap  Trading-Terminal-Setup-0.0.23.exe.blockmap  Trading-Terminal-Setup-0.0.24.exe.blockmap  Trading-Terminal-Setup-0.0.25.exe.blockmap  Trading-Terminal-Setup-0.0.27.exe.blockmap  USER_LOGIN_GUIDE.md  deploy-backend.sh  latest.yml  package-lock.json  package.json  pnpm-lock.yaml  setup-pm2.sh  tsconfig.base.json  verify-backend.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
data/: README.md
docs/: AI_SUPPLY_CHAIN_INTELLIGENCE_MANUAL.md  APPLICATION_SECURITY_PLAN.md  BACKTESTING_PRODUCTION_GAP_CHECKLIST.md  BACKTESTING_PRODUCTION_IMPLEMENTATION_CHECKLIST.md  CAM_TAB_FUTURE_PLAN.md  DATA_VAULT_WORKSPACE.md  ENGINE_CAPABILITY_ASSESSMENT.md  GRAPH_ENRICHMENT_MEMORY_SYSTEM.md  GWMD_AI_HUMAN_ONBOARDING.md  GWMD_DATA_VAULT_COMPLETE_GUIDE.md  (+14 more)
(+370 files in other folders)
