[package]
name = "trading-cockpit"
version = "0.1.0"
description = "Trading Cockpit Desktop"
authors = ["Trading Cockpit"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
